--- a/charts/trento-server/charts/trento-web/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/secret.yaml
@@ -5,7 +5,9 @@ metadata:
 type: Opaque
 data:
   SECRET_KEY_BASE: {{ include "trento.web.secretKeyBase" . | quote }}
+  {{- if not (eq .Values.alerting.smtpPassword nil) }}
   SMTP_PASSWORD: {{ .Values.alerting.smtpPassword | b64enc | quote }}
+  {{- end }}
   ADMIN_USER: {{ .Values.adminUser.username | b64enc | quote}}
   ADMIN_PASSWORD: {{- if .Values.adminUser.password }} {{ .Values.adminUser.password | b64enc | quote }}{{- else }} {{ include "trento.web.adminPassword" . | quote }}{{- end}}
   OIDC_CLIENT_SECRET: {{ .Values.oidc.clientSecret | b64enc | quote }}
