--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,7 +22,7 @@ env:
   OBS_PROJECT: ${{ secrets.OBS_PROJECT}}
 
 jobs:
-  test-helm-charts:
+  test:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -36,35 +36,11 @@ jobs:
           python-version: 3.13
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.7.0
+      - name: Enable version check
+        if: github.ref == 'refs/heads/main'
+        run: CT_FLAGS="--check-version-increment"
       - name: Lint
-        run: ct lint --config=ct.yaml --lint-conf=helmlintconf.yaml
-
-  release:
-    runs-on: ubuntu-latest
-    needs: [test-helm-charts]
-    if: github.event.release
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Set up Helm
-        uses: azure/setup-helm@v4
-        with:
-          version: v3.7.2
-      - name: Add dependency chart repos
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.7.0
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_RELEASE_NAME_TEMPLATE: "{{ .Version }}"
+        run: ct lint --config=ct.yaml --lint-conf=helmlintconf.yaml $CT_FLAGS
 
   obs-commit-charts:
     needs: [test-helm-charts]
